# gsPreCICE

./: #CMakeLists.txt#  .gitignore  CMakeLists.txt  README.md  gsJSONValidator.h  gsLookupFunction.h  gsPreCICE.h  gsPreCICEFunction.h  gsPreCICEUtils.h
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
doc/: gsPreCICE.dox
examples/: CMakeLists.txt  dummy-participant-JSON.cpp  participant-config.json  participant-schema.json  partitioned-heat-conduction-IGA-Dirichlet-3D.cpp  partitioned-heat-conduction-IGA-Dirichlet.cpp  partitioned-heat-conduction-IGA-Neumann-3D.cpp  partitioned-heat-conduction-IGA-Neumann.cpp  partitioned-heat-conduction.cpp  perpendicular-flap-JSON.cpp  perpendicular-flap-config-quadrature.json  perpendicular-flap-fluid-random.cpp  perpendicular-flap-multipatch-vertex-gismo.cpp  perpendicular-flap-shell-gismo.cpp  perpendicular-flap-shell.cpp  perpendicular-flap-vertex-gismo-remesh.cpp  perpendicular-flap-vertex-gismo-volume.cpp  perpendicular-flap-vertex-gismo.cpp  perpendicular-flap-waterlily.cpp  perpendular-flap-shell-gismo.cpp  turek-hron-vertex-vertex.cpp  vertical-beam-IGA-IGA-fake-fluid.cpp  vertical-beam-IGA-IGA-solid.cpp  vertical-beam-fluid-JSON.cpp  vertical-beam-fluid-config.json  vertical-beam-solid-JSON.cpp  vertical-beam-solid-config.json  volume_surface_example.cpp
examples/partitioned-heat-conduction/: README.md  partitioned-heat-conduction.cpp
examples/partitioned-heat-conduction-direct/: partitioned-heat-conduction-direct.cpp
examples/perpendicular-flap/: README.md  precice-config-remesh.xml  precice-config-shell-3d.xml  precice-config.xml
examples/perpendicular-flap-IGA-IGA/: perpendicular-flap-IGA-IGA-fluid.cpp  perpendicular-flap-IGA-IGA-solid.cpp
examples/perpendicular-flap-IGA-Spine/: solid-gismo-IGA.cpp
examples/perpendicular-flap/solid-gismo/: clean.sh  run.sh
examples/vertical-beam/: README.md
src/: gsLookupFunction.h  gsPreCICE.h  gsPreCICEFunction.h  gsPreCICEUtils.h
unittests/: gsPreCICE_test.cpp
(+27 files in other folders)
